--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,7 @@
+[build]
+  publish = "."
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build]
-  publish = "dist"
-  command = "npm run build"
