--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@supabase/supabase-js": "2.39.7",
     "react": "^19.2.4",
     "lucide-react": "^0.564.0",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
